--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "test:watch": "react-scripts test",
     "lint": "eslint src --max-warnings=0",
     "prepare": "husky install",
-    "generate": "yarn plop --plopfile ./generators/plopfile.js",
+    "generate": "plop --plopfile ./generators/plopfile.js",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public"
   },
@@ -60,8 +60,8 @@
   },
   "lint-staged": {
     "src/**/*.{ts,tsx,js}": [
-      "yarn lint --fix",
-      "yarn test --passWithNoTests --bail"
+      "npm run lint --fix",
+      "npm test --passWithNoTests --bail"
     ]
   },
   "jest": {
