--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "test": "react-scripts test --watchAll=false",
     "eject": "react-scripts eject",
     "test:watch": "react-scripts test",
-    "lint": "eslint src --max-warnings=0",
+    "lint": "eslint src",
     "prepare": "husky install",
     "generate": "plop --plopfile ./generators/plopfile.js",
     "storybook": "start-storybook -p 6006 -s public",
