eslint: config update
eslint: config update

eslint: config update

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "test": "react-scripts test --watchAll=false",
     "eject": "react-scripts eject",
     "test:watch": "react-scripts test",
-    "lint": "eslint src --max-warnings=0",
+    "lint": "eslint --cache --cache-strategy content",
     "prepare": "husky install",
     "generate": "plop --plopfile ./generators/plopfile.js",
     "storybook": "start-storybook -p 6006 -s public",
@@ -96,6 +96,8 @@
     "babel-plugin-named-exports-order": "^0.0.2",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^8.10.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
