--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,14 @@
     "node": true
   },
   "settings": {
+    "import/parsers": {
+      "@typescript-eslint/parser": [".ts", ".tsx"]
+    },
+    "import/resolver": {
+      "typescript": {
+        "project": "."
+      }
+    },
     "react": {
       "version": "detect"
     }
@@ -15,20 +23,46 @@
     "plugin:react/recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:prettier/recommended",
-    "plugin:storybook/recommended"
+    "plugin:storybook/recommended",
+    "plugin:import/recommended"
   ],
-  "overrides": [],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["react", "@typescript-eslint", "react-hooks"],
+  "plugins": ["react", "@typescript-eslint", "react-hooks", "import"],
   "rules": {
+    "import/no-unresolved": "error",
+    "import/no-unused-modules": ["error", { "unusedExports": true }],
+    "no-console": "warn",
+    "@typescript-eslint/no-unused-vars": "warn",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
     "react/prop-types": "off",
     "react/react-in-jsx-scope": "off",
+    "react/jsx-no-undef": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off"
-  }
+  },
+  "overrides": [
+    {
+      "files": ["*.js", "*.jsx"],
+      "rules": {
+        "no-shadow": "error",
+        "no-unused-vars": "warn"
+      }
+    },
+    {
+      "files": ["*.ts", "*.tsx"],
+      "rules": {
+        "@typescript-eslint/no-shadow": "error"
+      }
+    },
+    {
+      "files": ["*stories.tsx"],
+      "rules": {
+        "import/no-unused-modules": "off"
+      }
+    }
+  ]
 }
