feature: registration: component: template in SB
WIP: no null for types (todo: distribute)

feature: registration: component: flag & dropdown fixes

--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "@types/node": "^16.18.81",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "date-fns": "^3.3.1",
     "immer": "^10.0.3",
     "invariant": "^2.2.4",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "^5.0.1",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^3.0.0-beta.2",
     "styled-components": "^5.3.11",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -24,6 +28,7 @@
     "env:dev": "docker run -w /home/dev/registration-challenge --rm -it -v fork-env:/home/dev/.dev -v fork-npm-cache:/home/dev/.npm -v .:/home/dev/registration-challenge --name dev 8002615/dev || true",
     "env:start": "docker run -w /home/dev/registration-challenge --rm -it -v fork-env:/home/dev/.dev -v fork-npm-cache:/home/dev/.npm -v .:/home/dev/registration-challenge -p 3000:3000 --name start 8002615/dev || true",
     "env:test": "docker run -w /home/dev/registration-challenge --rm -it -v fork-env:/home/dev/.dev -v fork-npm-cache:/home/dev/.npm -v .:/home/dev/registration-challenge --name test 8002615/dev || true",
+    "env:sb": "docker run -w /home/dev/registration-challenge --rm -it -v fork-env:/home/dev/.dev -v fork-npm-cache:/home/dev/.npm -v .:/home/dev/registration-challenge -p 6006:6006 --name storybook 8002615/dev || true",
     "reg:pict": "cd src/feature/registration/reducer/test && ./pict",
     "start": "craco start",
     "build": "craco build",
@@ -33,6 +38,7 @@
     "lint": "eslint src",
     "prepare": "husky install",
     "generate": "plop --plopfile ./generators/plopfile.js",
+    "sb": "npm run storybook",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public"
   },
