--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "date-fns": "^3.3.1",
     "immer": "^10.0.3",
     "invariant": "^2.2.4",
+    "lodash-es": "^4.17.21",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -105,6 +106,7 @@
     "@storybook/react": "^6.5.16",
     "@storybook/testing-library": "^0.0.13",
     "@types/invariant": "^2.2.37",
+    "@types/lodash-es": "^4.17.12",
     "@types/styled-components": "^5.1.34",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
