--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "plop": "^3.1.2",
     "prettier": "^2.8.8",
     "prop-types": "^15.8.1",
+    "ts-jest": "^29.1.2",
     "webpack": "^5.90.2"
   }
 }
