--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "date-fns": "^3.3.1",
+    "i18n-iso-countries": "^7.10.1",
     "immer": "^10.0.3",
     "invariant": "^2.2.4",
     "lodash-es": "^4.17.21",
